--- a/prompt.html
+++ b/prompt.html
@@ -13,12 +13,13 @@
     <script>
         let a = prompt ("Hey whats your age?")
         a = Number.parseInt(a)
-        if(a>0){
-            alert("This is a valid age")
-        }
-        else{
-            alert("this is an invalid age");
-        }
+        // if(a>0){
+        //     alert("This is a valid age")
+        // }
+        // else{
+        //     alert("this is an invalid age");
+        // }
+        console.log("YOu can ", a<18? "not drive" : "drive");
     </script>
 </body>
 </html>
