--- a/Eventss/index.html
+++ b/Eventss/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="box">I am a Box</div>
+      <div class="box">I am a Box</div>
     </div>
     <button id="btn">Change Content</button>
     <script src="/Eventss/script.js"></script>
-</body>
+  </body>
 </html>
